updated swagger documentation visuals.
